--- a/www/index.html
+++ b/www/index.html
@@ -72,7 +72,8 @@
                 2. Cookie Policy
                 <br>
                 <br>
-                Our website you free cookies.
+                Our website does not use cookies to track any of your online events (which is why you have to log in
+                every time you move to a new window).
                 <br>
                 <br>
                 <br>
