--- a/www/index.html
+++ b/www/index.html
@@ -764,7 +764,7 @@
                     </div>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">
-                            <a>SCREEN_SIZE</a>
+                            <a>SCREEN SIZE</a>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">
                             <div class="checkbox">
@@ -780,7 +780,7 @@
                     <br>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">
-                            <a>NEXT_LOWEST_POWER_OF_TWO</a>
+                            <a>SNEXT LOWEST POWER OF TWO</a>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">
                             <div class="checkbox">
@@ -797,7 +797,7 @@
                     <br>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">
-                            <a>NEXT_HIGHEST_POWER_OF_TWO</a>
+                            <a>NEXT HIGHEST POWER OF TWO</a>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">
                             <div class="checkbox">
@@ -847,7 +847,7 @@
                     </div>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">
-                            <a>SCREEN_SIZE</a>
+                            <a>SCREEN SIZE</a>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">
                             <div class="checkbox">
@@ -863,7 +863,7 @@
                     <br>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">
-                            <a>NEXT_LOWEST_POWER_OF_TWO</a>
+                            <a>SNEXT LOWEST POWER OF TWO</a>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">
                             <div class="checkbox">
@@ -880,7 +880,7 @@
                     <br>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">
-                            <a>NEXT_HIGHEST_POWER_OF_TWO</a>
+                            <a>NEXT HIGHEST POWER OF TWO</a>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">
                             <div class="checkbox">
