--- a/www/canvas.html
+++ b/www/canvas.html
@@ -14,6 +14,7 @@
         background-color: rgba(0, 0, 0, 1);
       }
     </style>
+    <script src="js/jquery.min.js"></script>
 </head>
 
 <body>
