--- a/www/index.html
+++ b/www/index.html
@@ -655,7 +655,7 @@
                         </div>
                     </div>
                     <br>
-                    <div class="row">
+                    <div id="algorithm_javascript" class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <textarea id="algorithm_javascript_textarea" rows="8"
                                 style="text-align:left; border: 1px solid #FFF;" placeholder="Enter JavaScript here..."
