--- a/www/index.html
+++ b/www/index.html
@@ -1666,9 +1666,9 @@
             this.page_transitions = [];
             this.deleting_algorithm = false;
             this.user_algorithm = {
-                contexts =[],
-                programs = [],
-                stages = []
+                contexts: [],
+                programs: [],
+                stages: []
             };
         }
         GlobalState.prototype.post_connect_load = function () {
