--- a/www/index.html
+++ b/www/index.html
@@ -726,10 +726,10 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                        <button type="button"  style="background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto" onclick="state.add_context()">Add OpenGL Context</button>
-                        <br>
+                        <button type="button"  style="background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto" onclick="state.add_context()">Add WebGL Context</button>
                     </div>
                 </div>
+                <br>
                 <h1 class="editable"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Programs</a>
@@ -1042,10 +1042,10 @@
                 </h1>
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                        <button type="button" class="btn btn-outline-success mx-auto">Add OpenGL Program</button>
-                        <br>
+                        <button  style="background-color: rgba(.25,.25,.25,.75);" type="button" class="btn btn-outline-success mx-auto">Add OpenGL Program</button>
                     </div>
                 </div>
+                <br>
                 <h1 class="editable"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Pipeline Stages</a>
@@ -1290,8 +1290,7 @@
                 </h1>
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                        <button type="button" class="btn btn-outline-success mx-auto">Add Pipeline Stage</button>
-                        <br>
+                        <button  style="background-color: rgba(.25,.25,.25,.75);" type="button" class="btn btn-outline-success mx-auto">Add Pipeline Stage</button>
                     </div>
                 </div>
             </div>
