--- a/www/index.html
+++ b/www/index.html
@@ -474,7 +474,7 @@
             style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
-            <div class="col-12 col-sm-12 col-md-10 col-lg-8" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-10 col-lg-8" style="text-align: left;">
 
                 <h1 class="read_only"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
@@ -722,12 +722,9 @@
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Contexts</a>
                 </h1>
-                <div id="algorithm_contexts">
+                <button type="button"  style="background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto" onclick="state.add_context()">Add WebGL Context</button>
                 </div>
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                        <button type="button"  style="background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto" onclick="state.add_context()">Add WebGL Context</button>
-                    </div>
+                <div id="algorithm_contexts">
                 </div>
                 <br>
                 <h1 class="editable"
