--- a/www/index.html
+++ b/www/index.html
@@ -730,6 +730,7 @@
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Programs</a>
                 </h1>
+                <button  style="background-color: rgba(.25,.25,.25,.75);" type="button" class="btn btn-outline-success mx-auto">Add WebGL Program</button>
                 <h1 class="editable"
                     style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
@@ -1036,16 +1037,12 @@
                         </div>
                     </div>
                 </h1>
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                        <button  style="background-color: rgba(.25,.25,.25,.75);" type="button" class="btn btn-outline-success mx-auto">Add OpenGL Program</button>
-                    </div>
-                </div>
                 <br>
                 <h1 class="editable"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Pipeline Stages</a>
                 </h1>
+                <button  style="background-color: rgba(.25,.25,.25,.75);" type="button" class="btn btn-outline-success mx-auto">Add Pipeline Stage</button>
                 <h1 class="editable"
                     style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
@@ -1284,11 +1281,6 @@
                         </div>
                     </div>
                 </h1>
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                        <button  style="background-color: rgba(.25,.25,.25,.75);" type="button" class="btn btn-outline-success mx-auto">Add Pipeline Stage</button>
-                    </div>
-                </div>
             </div>
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
