--- a/www/index.html
+++ b/www/index.html
@@ -1942,7 +1942,7 @@
                     </div>
                     <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">
                         <div class="checkbox">
-                            <input style="float:right;" id="width_screen_size" type="checkbox" value="">
+                            <input style="float:right;" id="width_screen_size" checked=true type="checkbox" value="">
                             <label for="width_screen_size"></label>
                         </div>
                     </div>
