--- a/www/index.html
+++ b/www/index.html
@@ -722,7 +722,7 @@
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Contexts</a>
                 </h1>
-                <button type="button"  style="background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto" onclick="state.add_context()">Add WebGL Context</button>
+                <button  style="float:right; background-color: rgba(.25,.25,.25,.75);" type="button" class="btn btn-outline-success mx-auto" onclick="state.add_context()">Add WebGL Context</button>
                 <div id="algorithm_contexts">
                 </div>
                 <br>
@@ -730,7 +730,7 @@
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Programs</a>
                 </h1>
-                <button  style="background-color: rgba(.25,.25,.25,.75);" type="button" class="btn btn-outline-success mx-auto" onclick="state.add_program()">Add WebGL Program</button>
+                <button  style="float:right; background-color: rgba(.25,.25,.25,.75);" type="button" class="btn btn-outline-success mx-auto" onclick="state.add_program()">Add WebGL Program</button>
                 <div id="algorithm_programs">
                 </div>
                 <br>
@@ -738,7 +738,7 @@
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Pipeline Stages</a>
                 </h1>
-                <button  style="background-color: rgba(.25,.25,.25,.75);" type="button" class="btn btn-outline-success mx-auto" onclick="state.add_stage()">Add Pipeline Stage</button>
+                <button  style="float:right; background-color: rgba(.25,.25,.25,.75);" type="button" class="btn btn-outline-success mx-auto" onclick="state.add_stage()">Add Pipeline Stage</button>
                 <div id="algorithm_stages">
                 </div>
 
