--- a/www/index.html
+++ b/www/index.html
@@ -725,7 +725,7 @@
                 </h1>
 
                 <div class="editable"
-                    style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 14px; width:100%; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Contexts</a>
                     <div id="algorithm_contexts">
                     </div>
@@ -734,7 +734,7 @@
                 </div>
                 <br>
                 <div class="editable"
-                    style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 14px; width:100%; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Programs</a>
                     <div id="algorithm_programs">
                     </div>
@@ -743,7 +743,7 @@
                 </div>
                 <br>
                 <div class="editable"
-                    style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 14px; width:100%; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Pipeline Stages</a>
                     <div id="algorithm_stages">
                     </div>
