--- a/www/index.html
+++ b/www/index.html
@@ -729,7 +729,7 @@
                     <a>WebGL Contexts</a>
                     <div id="algorithm_contexts">
                     </div>
-                    <button style="float:right; background-color: rgba(.25,.25,.25,.75);" type="button"
+                    <button style="background-color: rgba(.25,.25,.25,.75);" type="button"
                         class="btn btn-outline-success mx-auto" onclick="state.add_context()">Add WebGL Context</button>
                 </div>
                 <br>
@@ -738,7 +738,7 @@
                     <a>WebGL Programs</a>
                     <div id="algorithm_programs">
                     </div>
-                    <button style="float:right; background-color: rgba(.25,.25,.25,.75);" type="button"
+                    <button style="background-color: rgba(.25,.25,.25,.75);" type="button"
                         class="btn btn-outline-success mx-auto" onclick="state.add_program()">Add WebGL Program</button>
                 </div>
                 <br>
@@ -748,7 +748,7 @@
                     <div id="algorithm_stages">
                     </div>
                     <br>
-                    <button style="float:right; background-color: rgba(.25,.25,.25,.75);" type="button"
+                    <button style="background-color: rgba(.25,.25,.25,.75);" type="button"
                         class="btn btn-outline-success mx-auto" onclick="state.add_stage()">Add Pipeline Stage</button>
                 </div>
             </div>
