--- a/www/index.html
+++ b/www/index.html
@@ -1936,7 +1936,7 @@
             var html = "";
 
             html += 
-            '<h1 class="editable" id="'+context_name+'" \n'+
+            '<h1 class="editable" id="'+context_identifier+'" \n'+
             'style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">\n'+
             '   <div class="row">\n'+
             '        <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">\n'+
