--- a/www/index.html
+++ b/www/index.html
@@ -2000,7 +2000,7 @@
             '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n'+
             '            <div class="checkbox">\n'+
             '                <input style="float:right;" id="'+context_identifier+'_width_next_lowest_power_of_two" type="checkbox" '+
-            (new_context.width.type==opengl_dimension_types.SCREEN_SIZE ? "checked" : "")+'>\n'+
+            (new_context.width.type==opengl_dimension_types.NEXT_LOWEST_POWER_OF_TWO ? "checked" : "")+'>\n'+
             '                <label for="'+context_identifier+'_width_next_lowest_power_of_two"></label>\n'+
             '            </div>\n'+
             '        </div>\n'+
@@ -2017,7 +2017,7 @@
             '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n'+
             '            <div class="checkbox">\n'+
             '                <input style="float:right;" id="'+context_identifier+'_width_next_highest_power_of_two" type="checkbox" '+
-            (new_context.width.type==opengl_dimension_types.SCREEN_SIZE ? "checked" : "")+'>\n'+
+            (new_context.width.type==opengl_dimension_types.NEXT_HIGHEST_POWER_OF_TWO ? "checked" : "")+'>\n'+
             '                <label for="'+context_identifier+'_width_next_highest_power_of_two"></label>\n'+
             '            </div>\n'+
             '        </div>\n'+
@@ -2034,7 +2034,7 @@
             '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n'+
             '            <div class="checkbox">\n'+
             '                <input style="float:right;"\n'+ 
-            (new_context.width.type==opengl_dimension_types.SCREEN_SIZE ? "checked" : "")+' '+
+            (new_context.width.type==opengl_dimension_types.EXACT ? "checked" : "")+' '+
             '                   onclick=""if($("#'+context_identifier+'_width_exact").prop("checked"))'+
             ' $("#'+context_identifier+'_width_exact_js").show(); else $("#'+context_identifier+'_width_exact_js").hide();'+
             '" id="'+context_identifier+'_width_exact" type="checkbox" value="">\n'+
@@ -2091,7 +2091,7 @@
             '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n'+
             '            <div class="checkbox">\n'+
             '                <input style="float:right;" id="'+context_identifier+'_height_next_lowest_power_of_two" type="checkbox" '+
-            (new_context.height.type==opengl_dimension_types.SCREEN_SIZE ? "checked" : "")+'>\n'+
+            (new_context.height.type==opengl_dimension_types.NEXT_LOWEST_POWER_OF_TWO ? "checked" : "")+'>\n'+
             '                <label for="'+context_identifier+'_height_next_lowest_power_of_two"></label>\n'+
             '            </div>\n'+
             '        </div>\n'+
@@ -2108,7 +2108,7 @@
             '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n'+
             '            <div class="checkbox">\n'+
             '                <input style="float:right;" id="'+context_identifier+'_height_next_highest_power_of_two" type="checkbox" '+
-            (new_context.height.type==opengl_dimension_types.SCREEN_SIZE ? "checked" : "")+'>\n'+
+            (new_context.height.type==opengl_dimension_types.NEXT_HIGHEST_POWER_OF_TWO ? "checked" : "")+'>\n'+
             '                <label for="'+context_identifier+'_height_next_highest_power_of_two"></label>\n'+
             '            </div>\n'+
             '        </div>\n'+
@@ -2125,7 +2125,7 @@
             '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n'+
             '            <div class="checkbox">\n'+
             '                <input style="float:right;"\n'+ 
-            (new_context.height.type==opengl_dimension_types.SCREEN_SIZE ? "checked" : "")+' '+
+            (new_context.height.type==opengl_dimension_types.EXACT ? "checked" : "")+' '+
             '                   onclick=""if($("#'+context_identifier+'_height_exact").prop("checked"))'+
             ' $("#'+context_identifier+'_height_exact_js").show(); else $("#'+context_identifier+'_height_exact_js").hide();'+
             '" id="'+context_identifier+'_height_exact" type="checkbox" value="">\n'+
